--- a/src/App.scss
+++ b/src/App.scss
@@ -8,3 +8,12 @@
   background-repeat: no-repeat;
   background-size: 80%;
 }
+
+.site-layout-background {
+  
+  padding: 0 100px 10px;
+  @media screen and (max-width: 1100px)  {
+    //css code
+    padding: 0 10px 10px;
+  }
+}
